--- a/login/login.html
+++ b/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,7 +39,7 @@
                     <p><a href="#">Esqueci minha senha</a></p>
                 </div>
 
-                <!-- Formulário de Registro -->
+    
                 <div id="register-form-container" class="form-section">
                     <h1>Criar uma Conta</h1>
                     <form id="register-form">
