--- a/dados/index.html
+++ b/dados/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,11 @@
 <body>
     <header>
         <div class="logo">
-            <span class="logo-text">bet</span><span class="logo-highlight">365</span>
+            <span class="logo-text">Bet</span><span class="logo-highlight">365</span>
         </div>
         <nav>
             <ul>
-                <li>Esportes</li>
+                <li>Esportes</li>   
                 <li>Ao-Vivo</li>
                 <li>Minhas Apostas</li>
             </ul>
