finalizando o mvp de IHC

--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bet365 - A Minha Conta</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="dados/dados.css">
 </head>
 <body>
     <header>
@@ -28,9 +28,9 @@
         <aside>
             <ul>
                 <li><a href="#">Dados do Usuario</a></li>
-                <li><a href="privacy-settings.html">Configurações de Privacidade</a></li>
-                <li><a href="dados.html">Solicitações de Dados</a></li>
-                <li><a href="suporte.html">Suporte ao Usuário</a></li>
+                <li><a href="dados/privacidade.html">Configurações de Privacidade</a></li>
+                <li><a href="dados/dados.html">Solicitações de Dados</a></li>
+                <li><a href="dados/suporte.html">Suporte ao Usuário</a></li>
             </ul>
         </aside>
         <section class="content">
@@ -64,7 +64,7 @@
             </form>
         </section>
     </main>
-    <script src="script.js"></script>
-    <script src="app.js"></script>
+    <script src="dados/dados.js"></script>
+    <script src="dados/app.js"></script>
 </body>
 </html>
