--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Login e Registro</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="login/login.css">
 </head>
 <body>
     <header>
@@ -34,7 +34,7 @@
                             <label for="login-two-factor">Ativar Autenticação de Dois Fatores</label>
                         </div>
 
-                        <button type="submit">Entrar</button>
+                        <button type="submit"><a href="menu.html">Entrar</a></button>
                     </form>
                     <p><a href="#">Esqueci minha senha</a></p>
                 </div>
@@ -55,12 +55,12 @@
                         <label for="register-password">Senha</label>
                         <input type="password" id="register-password" placeholder="Senha" required>
 
-                        <button type="submit">Registrar</button>
+                        <button type="submit"><a href="menu.html">Registrar</a></button>
                     </form>
                 </div>
             </div>
         </section>
     </main>
-    <script src="login.js"></script>
+    <script src="login/login.js"></script>
 </body>
 </html>
