adicionando a aba Uso de Dados para o mvp da materia de IHC

--- a/info.html
+++ b/info.html
@@ -31,6 +31,7 @@
                 <li><a href="dados/privacidade.html">Configurações de Privacidade</a></li>
                 <li><a href="dados/dados.html">Solicitações de Dados</a></li>
                 <li><a href="dados/suporte.html">Suporte ao Usuário</a></li>
+                <li><a href="dados/uso.html">Uso de Dados</a></li>
             </ul>
         </aside>
         <section class="content">
