--- a/dados/uso.html
+++ b/dados/uso.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <span class="logo-text">bet</span><span class="logo-highlight">365</span>
+            <span class="logo-text">Bet</span><span class="logo-highlight">365</span>
         </div>
     </header>
     <main>
@@ -64,7 +64,7 @@
             
             <h2 class="title">Funções Sociais dos Nossos Produtos</h2>
             <p>Se o cliente escolher participar em alguma das funcionalidades sociais que nós fornecemos juntamente com os nossos serviços (tal como salas de chat), a bet365 poderá armazenar, gravar ou, ainda, processar esta informação.</p>
-            
+
             <h2 class="title">Dados Pessoais que nós Compartilhamos com Terceiros</h2>
             <p>Poderemos compartilhar os seus Dados Pessoais dentro do grupo bet365 e com as organizações a seguir:</p>
             <ul>
