--- a/dados/privacidade.html
+++ b/dados/privacidade.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <span class="logo-text">bet</span><span class="logo-highlight">365</span>
+            <span class="logo-text">Bet</span><span class="logo-highlight">365</span>
         </div>
     </header>
     <main>
