--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
         <div class="user-actions">
             <span>R$0,00</span>
             <button class="deposit">Depositar</button>
-            <div class="user-profile"> <a href="info.html"> .</a></div>
+            <button class="user-profile"> <a href="info.html">Seu Perfil</a></button>
         </div>
     </header>
     <div class="content">
@@ -56,9 +56,7 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        &copy; 2024 Bet365
-    </div>
+    
     <script src="menu/menu.js"></script>
     <script src="menu/app.js"></script>
 </body>
