--- a/info.html
+++ b/info.html
@@ -21,7 +21,7 @@
         <div class="user-actions">
             <span>R$0,00</span>
             <button class="deposit">Depositar</button>
-            <div class="user-profile"></div>
+            <button class="user-profile"></button>
         </div>
     </header>
     <main>
