--- a/dados/uso.html
+++ b/dados/uso.html
@@ -79,6 +79,6 @@
             </ul>
         </section>
     </main>
-    <script src="script.js"></script>
+    <script src="dados.js"></script>
 </body>
 </html>
