--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <section class="auth-content">
             <div class="tabs">
                 <button class="tab-button active" data-tab="login">Entrar</button>
-                <button class="tab-button" data-tab="register">Registrar</button>
+                <button class="tab-button active" data-tab="register">Registrar</button>
             </div>
             <div class="form-container">
                 
