--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
 
                         
 
-                        <button type="submit"><a href="menu.html">Entrar</a></button>
+                        <button type="submit"><a href="menu/menu.html">Entrar</a></button>
                     </form>
                     <p><a href="#">Esqueci minha senha</a></p>
                 </div>
@@ -52,7 +52,7 @@
                         <label for="register-password">Senha</label>
                         <input type="password" id="register-password" placeholder="Senha" required>
 
-                        <button type="submit"><a href="menu.html">Registrar</a></button>
+                        <button type="submit"><a href="menu/menu.html">Registrar</a></button>
                     </form>
                 </div>
             </div>
