--- a/menu/menu.html
+++ b/menu/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bet365</title>
-    <link rel="stylesheet" href="menu/menu.css">
+    <link rel="stylesheet" href="menu.css">
 </head>
 <body>
     <header>
@@ -21,7 +21,7 @@
         <div class="user-actions">
             <span>R$0,00</span>
             <button class="deposit">Depositar</button>
-            <button class="user-profile"> <a href="info.html">Seu Perfil</a></button>
+            <button class="user-profile"> <a href="dados/info.html">Seu Perfil</a></button>
         </div>
     </header>
     <div class="content">
@@ -57,7 +57,7 @@
         </div>
     </div>
     
-    <script src="menu/menu.js"></script>
-    <script src="menu/app.js"></script>
+    <script src="menu.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
